tests/ui/match/match-arm-resolving-to-never.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/match-arm-resolving-to-never.rs:17:17
   |
LL | /     match E::F {
LL | |         E::A => 1,
LL | |         E::B => 2,
LL | |         E::C => 3,
...  |
LL | |         E::F => "",
   | |                 ^^ expected integer, found `&str`
LL | |     };
   | |_____- `match` arms have incompatible types
  --> $SRC_DIR/core/src/panic.rs:LL:COL
   |
   = note: this and all prior arms are found to be of type `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
